force-app/main/default/objects/Stratics_Logs__c/Stratics_Logs__c.object-meta.xml
<CustomObject>
    <description>Stratics Logs</description>
    <label>Stratics Log</label>
    <nameField>
        <label>Stratics Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stratics Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>