force-app/main/default/objects/Stratics_Logs__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Success</description>
    <inlineHelpText>Is Success</inlineHelpText>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>