force-app/main/default/objects/Stratics_Logs__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead</description>
    <inlineHelpText>Lead</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Stratics Logs</relationshipLabel>
    <relationshipName>Stratics_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>