force-app/main/default/objects/Stratics_Logs__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <description>Response Message</description>
    <inlineHelpText>Response Message</inlineHelpText>
    <label>Response Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>